<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_novo_pet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.petshow.activity.NovoPetActivity"
    tools:showIn="@layout/activity_novo_pet"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/com_facebook_button_icon_blue"
        android:id="@+id/novoPet_imageProfile"
        android:layout_height="65dp" />

    <TextView
        android:text="@string/lblNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="@dimen/NumberMediumTextSize"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/novoPet_txtNome"

        android:textColorLink="@android:color/white"
        android:paddingTop="5dp" />

    <TextView
        android:text="@string/lblSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="@dimen/NumberMediumTextSize"
        android:paddingTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupSexo"
            android:paddingTop="5dp">

            <RadioButton
                android:text="@string/lblMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/novoPet_rMacho"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/lblFemea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/novoPet_rFemea"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:text="@string/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="@dimen/NumberMediumTextSize"
        android:paddingTop="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/novoPet_spTiposAnimais"
        android:paddingTop="5dp" />

    <TextView
        android:text="@string/lblRaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="@dimen/NumberMediumTextSize"
        android:paddingTop="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/novoPet_spRacas"
        android:paddingTop="5dp" />

    <TextView
        android:text="@string/lblDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="@dimen/NumberMediumTextSize"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/novoPet_dtNascimento"
        android:paddingTop="5dp" />

</LinearLayout>
